<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txvName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintVertical_bias="0.046" android:hint="@string/txvName"/>
    <TextView
            android:layout_width="227dp"
            android:layout_height="29dp"
            android:text="@string/txvShow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txvName"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txvName"
            app:layout_constraintVertical_bias="0.032" android:id="@+id/txvShow"/>
    <RadioGroup
            android:layout_width="292dp"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" app:layout_constraintStart_toStartOf="@+id/btnStart"
            android:id="@+id/rdGp">
        <RadioButton
                android:text="@string/rdPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdPaper" android:layout_weight="1"
                android:checked="true"/>
        <RadioButton
                android:text="@string/rdStone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdStone" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rdScissor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdScissor" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btnStart"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart" app:layout_constraintStart_toStartOf="@+id/txvShow"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txvShow"/>
    <TextView
            android:text="@string/txvShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvShowName" app:layout_constraintStart_toStartOf="@+id/rdGp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rdGp"/>
    <TextView
            android:text="@string/txvShowWinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvShowWinner" app:layout_constraintStart_toEndOf="@+id/txvShowName"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/txvShowName"/>
    <TextView
            android:text="@string/txvShowMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvShowMe" app:layout_constraintStart_toEndOf="@+id/txvShowWinner"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="@+id/txvShowWinner"/>
    <TextView
            android:text="@string/txvShowPc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvShowPc" app:layout_constraintStart_toEndOf="@+id/txvShowMe"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="@+id/txvShowMe"/>

</android.support.constraint.ConstraintLayout>